Update to Gradle 8, Java 21 and SpongeAPI 12